# coursera_courses

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
notes/: linux.org
scripts/: CMakeLists.txt  assert.cpp
src/: runGTest.cpp
src/c_lectures/: CMakeLists.txt  clectures.h  clecturesTests.cpp
src/c_lectures/01/: a.out  divmod.c  gcd  gcd.c
src/c_lectures/1.3/: fib.c
src/c_lectures/2.1/: mem_allocation.c
src/cookbook/: CMakeLists.txt  cookbook.h  cookbook_01.cpp  test01.cpp
src/cpp_lectures/: CMakeLists.txt
src/cpp_lectures/03/: c++_names_mangling.cpp  const_ref.cpp  dangling_pointer.cpp  dangling_reference.cpp  newdelete  newdelete.cpp  pointer_to_array.cpp
src/cpp_lectures/04/: class_init.cpp  cntr_delegation.cpp  cv.cpp  explicit_convertion.cpp  rvo.cpp
src/cpp_lectures/05/: method_annotation.cpp  rvalue.cpp  silly_pointer.cpp
src/cpp_lectures/06/: bit_cast.cpp  operator_overload.cpp  positive_hack.cpp  post_pre_increment.cpp  static_and_friend.cpp  static_cast.cpp  strange_implicit_cast.cpp
src/cpp_lectures/07/: addressof.cpp  pointer_to_class_memeber.cpp  spaceship.cpp
src/cpp_lectures/08/: deleter.cpp  inheritance.cpp  static_binding.cpp  virtual_destructor.cpp
src/cpp_lectures/09/: multiple_inheritance.cpp
src/cpp_lectures/11/: slicing.cpp
src/cpp_lectures/12/: controllable.h  global_new.cpp  noexcept.cpp  overload_new.cpp  vec1.cpp  vec2.cpp
src/cpp_lectures/16/: init_list.cpp  integral_const.cpp  lazy_instantiation.cpp  liskov_subs_violation.cpp  template_specialization.cpp  typename.cpp
src/cpp_lectures/19/: variable_templ.cpp  void_t.cpp
src/cpp_lectures/20/: fib_iter.cpp  iter_category.cpp
src/cpp_lectures/21/: bit_set.cpp
src/cpp_lectures/26/: constexpr.cpp  constexpr_if.cpp
src/cpp_lectures/27/: print_all.cpp
src/ibm_data_science/: module6_assignment.ipynb
src/leetcode/: CMakeLists.txt  fizzbuz.cpp  isPolindrom.cpp  leetCodeTasks1.cpp  leetCodeTasks1.h  leetCodeTasks1Tests.cpp  linkedListExample.cpp  linkedListsProblems.cpp  linkedListsProblems.h  linkedListsTests.cpp  main.cpp  myLinkedList.h  rc_custom_type_example.cpp  rc_example.cpp  stackProblems.cpp  stackProblems.h  stackProblemsTests.cpp  stringAndarray.cpp  stringAndarray.h  stringAndarrayTests.cpp  twoSums.cpp
src/red_belt/: CMakeLists.txt  red_belt.h  test.cpp
src/red_belt/week4/: stringView.cpp
src/templates/: CMakeLists.txt
src/templates/basics/: binary.cpp  max.cpp  max1.hpp  stack1.cpp  stack1.hpp  stack1_impl.hpp
src/white_belt/: CMakeLists.txt
src/white_belt/week1/01/: README.md  assignment1.cpp  test.txt
src/white_belt/week1/02/: REAME.md  assignment2.cpp
src/white_belt/week1/03/: README.md  assignment3.cpp
src/white_belt/week1/04/: README.md  assignment.cpp
src/white_belt/week1/05/: README.md  assignment.cpp
src/white_belt/week1/06/: README.md  assignment.cpp
src/white_belt/week1/07/: README.md  assignment.cpp
src/white_belt/week2/: wb_week2_tasks.cpp
